--- a/assets/extra.css
+++ b/assets/extra.css
@@ -9,8 +9,9 @@
 #tbl_mhsprovregis button.export,
 #tbl_kpall button.export,
 #tbl_kppkm button.export,
-tbl_jafunglast button.export,
+#tbl_jafunglast button.export,
 #tbl_jafunggrowth button.export,
+#tbl_bebanajar button.export,
 #tbl_mahasiswaAktif button.export,
 #tbl_mahasiswaAsing button.export,
 #tbl_matkulBaru button.export,
