change on Dosen & Alumni

--- a/assets/extra.css
+++ b/assets/extra.css
@@ -37,7 +37,7 @@
 #tbl_kerjasamaPPP button.export,
 #tbl_presNonAkademik button.export,
 #tbl_presAkademik button.export,
-#tbl_dosens3 button.export,
+#tbl_dosen button.export,
 #tbl_jabfungth button.export,
 #tbl_persenjabfungth button.export,
 #tbl_dosentetapinf button.export,
